# Service

backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/routes/: upload.py
frontend/: README.md  package-lock.json
frontend/frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/ui/: Button.jsx  Progress.jsx  Toaster.jsx
frontend/src/pages/: UploadPage.jsx
